--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@Components/*": ["components/*"]
+      "@Components/*": ["components/*"],
+      "@Utils/*": ["utils/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
